@@ -11,8 +11,8 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -20,8 +20,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -29,7 +29,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenDepartmentsAsc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1/SK1",
                 "K1/SK2",
                 "K1/SK1/SSK1",
@@ -37,7 +37,7 @@ public class DepartmentsTest {
                 "K2",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -54,7 +54,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenDepartmentsDesc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1/SK1",
                 "K1/SK2",
                 "K1/SK1/SSK1",
@@ -62,7 +62,7 @@ public class DepartmentsTest {
                 "K2",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
